--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    # Install MinGW cross-compiler
-    - name: Install MinGW
+    - name: Install Dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y mingw-w64
+        sudo apt-get install -y wine64
 
     # Make build script executable and run it
     - name: Build
