--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,3 +30,22 @@ jobs:
     - name: Test
       run: |
         wine ./algo.exe "input" --math
+
+
+    - name: Package for Upload
+      run: |
+        mkdir release
+        cp algo.exe release/
+        cp -r input release/
+    
+    - name: Upload Package
+      uses: actions/upload-artifact@v3
+      with:
+        name: exe-with-input
+        path: release/
+
+    - name: Upload Exe Standalone
+      uses: actions/upload-artifact@v3
+      with:
+        name: algo.exe
+        path: algo.exe
