--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -7,6 +7,9 @@ on:
     branches: [ '**' ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -38,9 +41,30 @@ jobs:
         cp algo.exe release/
         cp glpk_4_65.dll release/
         cp -r input release/
+        
+        cd release
+        zip -r ../release.zip ./*
     
     - name: Upload Package
       uses: actions/upload-artifact@v3
       with:
         name: exe-with-input
         path: release/
+
+    - name: Create Release
+      # Only create release on main branch
+      if: github.ref == 'refs/heads/main'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
+      with:
+        files: release.zip
+        tag_name: v${{ github.run_number }} # Uses the workflow run number
+        name: Release ${{ github.run_number }}
+        body: |
+          Automated release from GitHub Actions
+          Commit: ${{ github.sha }}
+          Workflow: ${{ github.workflow }}
+          Run: ${{ github.run_number }}
+        draft: false
+        prerelease: false
